Use list implementation from EntityResource for all the entities